# OpenCEmulator

./: .gitmodules  CMakeLists.txt  README.md
src/: ArgList.cpp  ArgList.h  CMakeLists.txt  Color.cpp  Color.h  ComponentsConfiguration.cpp  ComponentsConfiguration.h  Configuration.cpp  Configuration.h  FontLoader.cpp  FontLoader.h  Instance.cpp  Instance.h  InstancesConfiguration.cpp  InstancesConfiguration.h  MainWindow.cpp  MainWindow.h  OpenCEmulator.cpp  OpenCEmulator.h  Scheduler.cpp  Scheduler.h  ScreensWidget.cpp  ScreensWidget.h  Userdata.cpp  Userdata.h  main.cpp
src/apis/: Api.cpp  Api.h  ComponentApi.cpp  ComponentApi.h  ComputerApi.cpp  ComputerApi.h  OsApi.cpp  OsApi.h  PersistenceApi.cpp  PersistenceApi.h  SystemApi.cpp  SystemApi.h  UnicodeApi.cpp  UnicodeApi.h  UserdataApi.cpp  UserdataApi.h
src/components/: ColorPalette.cpp  ColorPalette.h  Component.cpp  Component.h  ComponentComputer.cpp  ComponentComputer.h  ComponentEEPROM.cpp  ComponentEEPROM.h  ComponentFilesystem.cpp  ComponentFilesystem.h  ComponentGPU.cpp  ComponentGPU.h  ComponentKeyboard.cpp  ComponentKeyboard.h  ComponentRealFilesystem.cpp  ComponentRealFilesystem.h  ComponentScreen.cpp  ComponentScreen.h  ComponentSerializer.cpp  ComponentSerializer.h
src/resources/: font.qrc
src/resources/lua/: bios.lua  lua.qrc  machine.lua
src/ui/: ComponentModifier.cpp  ComponentModifier.h  CreateComponent.cpp  CreateComponent.h  KeyboardModifier.cpp  KeyboardModifier.h  MainWindow.cpp  MainWindow.h  ManageComponents.cpp  ManageComponents.h  ManageInstances.cpp  ManageInstances.h  ScreensWidget.cpp  ScreensWidget.h  createcomponent.ui  keyboardmodifier.ui  mainwindow.ui  managecomponents.ui  manageinstances.ui
